--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
       <artifactId>json</artifactId>
       <version>20190722</version>
     </dependency>
+
+    <dependency>
+      <groupId>p6spy</groupId>
+      <artifactId>p6spy</artifactId>
+      <version>3.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
