--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,84 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
+
+    <!--servlet-->
+    <servlet>
+        <servlet-name>InitServlet</servlet-name>
+        <servlet-class>ViewNormal.InitServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>LoadMinimizedStationsServlet</servlet-name>
+        <servlet-class>ViewNormal.LoadMinimizedStationsServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>CreateStationServlet</servlet-name>
+        <servlet-class>ViewNormal.CreateStationServlet</servlet-class>
+    </servlet>
+    
+    <servlet>
+        <servlet-name>UploadDataServlet</servlet-name>
+        <servlet-class>ViewNormal.UploadDataServlet</servlet-class>
+    </servlet>
+    
+    <servlet>
+        <servlet-name>QueryDataGraphServlet</servlet-name>
+        <servlet-class>ViewNormal.QueryDataGraphServlet</servlet-class>
+    </servlet>
+
+    <!-- servlet mapping-->
+    <servlet-mapping>
+        <servlet-name>InitServlet</servlet-name>
+        <url-pattern/>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>LoadMinimizedStationsServlet</servlet-name>
+        <url-pattern>/LoadStations</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>CreateStationServlet</servlet-name>
+        <url-pattern>/CreateStation</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>UploadDataServlet</servlet-name>
+        <url-pattern>/UploadData</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>QueryDataGraphServlet</servlet-name>
+        <url-pattern>/QueryDataGraph</url-pattern>
+    </servlet-mapping>
+    
+    <!--jsp-->
+    <servlet>
+        <servlet-name>Homepage</servlet-name>
+        <jsp-file>/WEB-INF/ViewNormal/Homepage.jsp</jsp-file>
+    </servlet>
+
+    <servlet>
+        <servlet-name>Error</servlet-name>
+        <jsp-file>/WEB-INF/ViewNormal/Error.jsp</jsp-file>
+    </servlet>
+
+    <!--jsp mapping-->
+    <servlet-mapping>
+        <servlet-name>Homepage</servlet-name>
+        <url-pattern>/Homepage</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>Error</servlet-name>
+        <url-pattern>/Error</url-pattern>
+    </servlet-mapping>
+
 </web-app>
